--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         <activity android:name=".MainActivity" android:label="Main Example"/>
         <activity android:name=".CalcMainActivity" android:label="Calc Main Thread"/>
         <activity android:name=".CalcThreadedActivity" android:label="Calc Threaded"/>
+        <activity android:name=".CalcThreadedRightActivity" android:label="Calc Threaded Right"/>
         <service android:name=".SimpleService"/>
         <service android:name=".OtherProcessService"
             android:process=":other"/>
