Add a correct example of Threading in Android
The new example utilizes a Handler to correctly coordinate between a Thread and
a Activities with config-changes.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         <activity android:name=".MainActivity" android:label="Main Example"/>
         <activity android:name=".CalcMainActivity" android:label="Calc Main Thread"/>
         <activity android:name=".CalcThreadedActivity" android:label="Calc Threaded"/>
+        <activity android:name=".CalcThreadedAlmostRightActivity" android:label="Calc Threaded Almost Right"/>
         <activity android:name=".CalcThreadedRightActivity" android:label="Calc Threaded Right"/>
         <service android:name=".SimpleService"/>
         <service android:name=".OtherProcessService"
